added queries + MeteorologyDayData DTO + encoding fixes